[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/down_stand.png" type="Texture" id=1]
[ext_resource path="res://scenes/tower_lukas.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 96.0

[node name="tower" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 1 )

[node name="attack_speed" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="area_shape_entered" from="detection_area" to="." method="_on_detection_area_area_shape_entered"]
[connection signal="timeout" from="attack_speed" to="." method="_on_attack_speed_timeout"]
